sumo/tests/sumo/output/tripinfo/errors/freq_false/errors.sumo
Error: The description of the detector '4/1to3/1' contains a broken number.
Quitting (on error).
